## $Id
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libspp.a

libspp_a_SOURCES = spp_arpspoof.c spp_arpspoof.h spp_bo.c spp_bo.h \
spp_frag2.c spp_frag2.h spp_http_decode.c spp_http_decode.h \
spp_portscan.c spp_portscan.h spp_rpc_decode.c spp_rpc_decode.h  \
spp_stream4.c spp_stream4.h spp_telnet_negotiation.c \
spp_telnet_negotiation.h spp_asn1.c spp_asn1.h spp_fnord.c spp_fnord.h \
spp_conversation.c spp_conversation.h spp_portscan2.c spp_portscan2.h \
spp_perfmonitor.c spp_perfmonitor.h

INCLUDES = @INCLUDES@
